--- a/WebAppRazor/Pages/_ProductEditor.cshtml
+++ b/WebAppRazor/Pages/_ProductEditor.cshtml
@@ -29,8 +29,10 @@
 		</div>
 		<select class="form-control" asp-for="Product.CategoryId" asp-items="@(new SelectList(Model?.Categories, "CategoryId", "Name"))" disabled="@Model?.ReadOnly">
 			<option value="" disabled selected>Wybierz kategorię</option>
+			<option value="-1">Dodaj nową kategorię...</option>
 		</select>
 	</div>
+	<partial name="_CategoryEditor" for="Product" />
 
 	<div class="form-group">
 		<label asp-for="Product.SupplierId"></label>
