--- a/WebAppMvc/Views/_ViewImports.cshtml
+++ b/WebAppMvc/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@using WebAppRazor.Models;
+﻿@using WebAppMvc.Models
+@using WebAppMvc.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WebApp
