--- a/WebAppMvc/Views/Home/CategoryEditor.cshtml
+++ b/WebAppMvc/Views/Home/CategoryEditor.cshtml
@@ -16,15 +16,15 @@
 		setVisibility(false);
 		document.querySelector("select[name='Product.CategoryId']").
 				addEventListener("change", (event) =>
-					setVisibility(event.target.value === '-1'));
+						setVisibility(event.target.value === '-1'));
 	});
 </script>
 
 <div class="form-group bg-info mt-2 p-1" id="categoryGroup">
 	@{ #pragma warning disable CS8602 }
-	<label class="text-white" asp-for="Category.Name">
+	<label class="text-white" asp-for="@Model.Category.Name">
 		New Category Name
 	</label>
-	<input class="form-control" asp-for="Category.Name" value="" id="categoryInput" />
+	<input class="form-control" asp-for="@Model.Category.Name" value="" id="categoryInput" />
 	@{ #pragma warning restore CS8602 }
 </div>
