--- a/WebAppMvc/Views/Home/ProductEditor.cshtml
+++ b/WebAppMvc/Views/Home/ProductEditor.cshtml
@@ -35,10 +35,20 @@
 			<option value="-1">Dodaj nową kategorię...</option>
 		</select>
 	</div>
-	<vc:category-editor />
+	<partial name="CategoryEditor" for="Product" />
 
 	<div class="form-group">
-		<label asp-for="Product.SupplierId"></label>
+		<label asp-for="Product.SupplierId">
+			Supplier
+			@if (Model?.ReadOnly == false)
+			{
+				<input type="hidden" name="returnPage" value="@Model?.Action" />
+				<button class="btn btn-sm btn-outline-primary m-lg-3 my-1"
+						asp-action="SupplierBreakOut" formmethod="get" formnovalidate>
+					Create New Supplier
+				</button>
+			}
+		</label>
 		<div>
 			<span asp-validation-for="Product.SupplierId" class="text-danger"></span>
 		</div>
